--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 </footer>
 <script id="nav-data" type="text/plain">
 - Education, 강의팔이
-    - Math Training, 수학 훈련과정
-    - ICT Training, 컴터 훈련과정
+    - Math Training, 實用主義 수학언어
+    - ICT Training, 人間主導 개발활동
 - Essays, 책팔이
     - Investment, 現實主義 금융재테크
     - Economics, 實實求에 정치경제학
