added about page

--- a/index.html
+++ b/index.html
@@ -253,16 +253,16 @@
     </section>
     <footer>
         <div class="footer-content">
-            <div class="copyright">2023-<span id="current-year"></span> &copy; <a
-                    href="mailto:primenumbersam@gmail.com">GITSAM</a></div>
+            <div class="copyright">2023-<span id="current-year"></span> &copy; <a href="about.html">GITSAM</a> <a
+                    href="mailto:primenumbersam@gmail.com">Email</a></div>
             <div class="footer-links">
                 <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>
-                <a href="disclaimer.md">Disclaimer</a>
+                <a href="disclaimer.html">Disclaimer</a>
             </div>
         </div>
     </footer>
     <script id="nav-data" type="text/plain">
-- Decoding, 보그체번역
+- Decoding, 소음제거
     - Tech Guide, 컴맹탈출 가이드, https://primenumbersam.github.io/astro
     - Book Review, 서적·컬럼 독후감, https://blog.naver.com/primenumbersam
     - Youtube Briefing, 유튜브영상 브리핑, https://primenumbersam.blogspot.com/
@@ -270,23 +270,23 @@
     - Book Library, 집필서적, https://primenumbersam.gitlab.io/books/
     - Working Papers, 작업논문, https://primenumbersam.gitlab.io/mkdocs/
     - PhD Thesis, 박사논문, https://primenumbersam.gitlab.io/quarto/
-- Training, 강의팔이
+- Training, 교습소
     - Math Training,수학응용 훈련, https://primenumbersam.github.io/quarto/
     - ICT Training, ICT설계 훈련, https://gitsam.com/training
 </script>
     <script id="hero-data" type="text/plain">
 - WHO, 누구
-    - Quant: Professional problem formulator in Math., 퀀트: 현실 문제 수학적 모형화 전문가
-    - Hacker: Independent problem solver in ICT., 해커: 정보통신기술 문제 독립적 해결가
-    - Philosophy: Minimalism for Sustainability., 철학: 지속가능성을 위한 최소주의
+    - Quant: Professional problem modeler in Math, 퀀트: 현실 문제 수학적 모델링 전문가
+    - Hacker: Independent problem resolver in ICT, 해커: 정보통신기술 문제 독립적 해결가
+    - Philosophy: Minimalism for Sustainability, 철학: 지속가능성을 위한 최소주의
 - WHY, 왜
-    - Adapting to the AX Era VibeOps., 인공지능전환시대 느좋코딩 적응
-    - Master Abstraction & Structuring Skills., 추상화 및 구조화 역량 개발
-    - For thinking reeds who walk the talk., 言行一致 하며 생각하는 갈대들을 위해
+    - Adapt to the AX Era VibeOps, 인공지능전환시대 느좋코딩 적응
+    - Necessity of Math & ICT Literacy, 수학 및 정보통신기술 문해력 필요성
+    - For thinking reeds who walk the talk, 생각하고 言行一致하는 갈대들을 위해
 - HOW, 어떻게
-    - High-Logic but Low-Code., 생각은 깊게 구현은 쉽게
-    - Math = an effective language; Computer = an efficient tool., 수학은 효과적 언어; 컴퓨팅은 효율적 도구
-    - Specialized in Math & ICT Training., 수학 및 정보통신기술 훈련과정 특화
+    - High-Logic but Low-Code, 생각은 깊게 구현은 쉽게
+    - Master Abstraction & Structuring Skills, 추상화 및 구조화 역량 개발
+    - Use Math for effectiveness; Computing for efficiency, 효과를 위한 수학과 효율을 위한 컴퓨팅
 </script>
     <script>
         // To change default language to English, change curL = 1 to curL = 0
@@ -344,9 +344,9 @@
         }
 
         function updateBtn() {
-            $('btn-math').innerText = curL ? '수학 훈련' : 'Math Training';
+            $('btn-math').innerText = curL ? '수학응용 훈련' : 'Math Training';
             $('btn-math').href = '#';
-            $('btn-comp').innerText = curL ? '컴터 훈련' : 'ICT Training';
+            $('btn-comp').innerText = curL ? 'ICT설계 훈련' : 'ICT Training';
             $('btn-comp').href = '#';
         }
 
